sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/Store_Readiness_Validation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>LEM-1684: It stores the details of validation rules that needs to be evaluated for store readiness check.</description>
    <label>Readiness Validation Rule</label>
    <pluralLabel>Readiness Validation Rules</pluralLabel>
</CustomObject>