sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-1684: It indicates description for the validation rule.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>