sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>LEM-1684: It indicates the error message to be displayed when the validation rule criteria fails.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>