sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>LEM-1684: It indicates label of the field on which the validation needs to be performed.</description>
    <label>Field Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>