sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>LEM-1684: It indicates the field name on which the validation needs to be performed.</description>
    <label>Field Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>