sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1684: It indicates whether validation rule is active. The system only picks the active validation rules for readiness check.</description>
    <inlineHelpText>Enable to trigger the validation rule</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>