sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <description>LEM-1684: It indicates the label of object on which the validation needs to be performed.</description>
    <label>Object Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>