sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>LEM-1684: It indicates object name on which the validation needs to be performed.</description>
    <label>Object Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>