sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Quick_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action_Name__c</fullName>
    <label>Quick Action Name</label>
    <type>TextArea</type>
</CustomField>