sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Service_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Class_Name__c</fullName>
    <description>LEM-1684: It indicates the service class name where automation is written for the validation rule.</description>
    <label>Service Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>