sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/fields/Service_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Method_Name__c</fullName>
    <description>LEM-1684: It indicates the service method name where automation is written for the validation rule.</description>
    <label>Service Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>