sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_Label__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>