sfdx-source/force-app/main/default/objects/Store_Readiness_Validation_Rule__mdt/listViews/All_Values_with_Service_Details.listView-meta.xml
<ListView>
    <fullName>All_Values_with_Service_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Service_Class_Name__c</columns>
    <columns>Service_Method_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values with Service Details</label>
</ListView>